# Auto-DBA

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  postgresql.conf  pyproject.toml  test_slow_query.py
.claudecode/: config.json
.cursor/: mcp.json
.github/workflows/: ci.yml
public/: index.html
scripts/: seed_slow_query.py
src/auto_dba/: __init__.py  analyst.py  db.py  guardrail.py  logging.py  main.py  risk.py  stats_engine.py  stats_store.py
tests/: conftest.py  test_basic.py  test_e2e.py  test_guardrail.py  test_risk.py  test_stats_engine_db.py
